--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,21 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+    <ion-row class="fila">
+      <ion-col class="vot1" col-6 text-center (click)="votar(votacion.opciones[0])" >
+        <ion-row>
+          <ion-col class="imagen">
+            <h1> {{votacion.opciones[0].titulo}} </h1>
+            <img src="{{votacion.opciones[0].imagen}}" class="imagen" alt="">
+            <h2 padding> {{votacion.opciones[0].pregunta}} </h2>
+          </ion-col>
+        </ion-row>
+        
+      </ion-col>
+      <ion-col col-6 class="vot2" text-center (click)="votar(votacion.opciones[1])">
+        <h1> {{votacion.opciones[1].titulo}} </h1>
+        <img src="{{ votacion.opciones[1].imagen }}" class="imagen"  alt="">
+        <h2> {{votacion.opciones[1].pregunta}} </h2>
+      </ion-col>
+      
+    </ion-row>
 </ion-content>
+
