--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,7 +11,7 @@
     </ion-col>
   </ion-row>
   <div>
-    <form (ngSubmit)="ingresar()">
+    <form (ngSubmit)="ingresar(' ')">
       <ion-item class="rounded">
         <ion-label>  <ion-icon name="person"></ion-icon> Nombre</ion-label>
         <ion-input  type="text" [(ngModel)]="nombre" name="Nombre">  <ion-icon name="person"></ion-icon></ion-input>
