arreglo vista landscape

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
 <ion-content padding class="login" >
   <ion-row>
     <ion-col text-center>
-      <img width="" height="" src="assets/imgs/trueno-icono.png">
+      <img class="imgLogin" src="assets/imgs/trueno-icono.png">
     </ion-col>
   </ion-row>
   <div>
